// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`<Tile /> building 1`] = `
<button
  aria-disabled="false"
  aria-label="tile -1,0"
  class="tile player controlled"
  type="button"
>
  <div
    aria-hidden="true"
    class="strokeLayer"
  />
  <div
    aria-hidden="true"
    class="innerLayer"
  />
  <div
    aria-label="player tower"
    aria-roledescription="game building"
    class="building"
    role="img"
  />
</button>
`;

exports[`<Tile /> fake Tile with no id 1`] = `
<button
  aria-disabled="false"
  aria-label="tile null"
  class="tile"
  type="button"
>
  <div
    aria-hidden="true"
    class="strokeLayer"
  />
  <div
    aria-hidden="true"
    class="innerLayer"
  />
</button>
`;

exports[`<Tile /> render: button role 1`] = `
<button
  aria-disabled="false"
  aria-label="tile -1,0"
  class="tile"
  type="button"
>
  <div
    aria-hidden="true"
    class="strokeLayer"
  />
  <div
    aria-hidden="true"
    class="innerLayer"
  />
</button>
`;
